# python-micromouse

./: README.md  pyproject.toml
.github/workflows/: main.yaml
app/: base_mouse.py  basic_mouse.py  main.py  maze.py  maze_display.py  maze_event_loop.py  micro_mouse_colors.py
app/mouse_exploration/: exploration_data.json  exploration_data_3335.json  exploration_data_767.json
test/: maze_test.py  sudoku_board_test.py
