[tool.poetry]
name = "python-sudoku"
version = "0.1.0"
description = "A repository that contains all the examples that go with a Medium article called "
authors = ["Patrick Kalkman <patrick@simpletechture.nl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
pytest = "^7.3.2"
numpy = "^1.25.0"
pygame = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
